preliminary WBEZ styles

--- a/src/styl/colors.styl
+++ b/src/styl/colors.styl
@@ -15,9 +15,9 @@ $color-editor-text = #333333
 $color-editor-placeholder = #CACACA
 
 $chart-colors = \
-	#a50026 \
-	#fdae61 \
-	#d73027 \
+	#F9B816 \
+	#72A2A9 \
+	#EC0101 \
 	#abd9e9 \
 	#f46d43 \
 	#74add1 \
