--- a/src/styl/chart-renderer.styl
+++ b/src/styl/chart-renderer.styl
@@ -23,6 +23,7 @@ svg
   &.renderer-svg
     fill $color-bg
     font-family $font-sans-light
+    font-weight 300
     text-rendering optimizeLegibility
     box-sizing border-box
     .svg-background
@@ -36,6 +37,7 @@ svg
   .axis
     .tick
       font-family $font-sans-light
+      font-weight 300
       &[data-anchor="middle"]
         text
           text-anchor middle
@@ -75,6 +77,7 @@ svg
 
   .concealer-label
     font-family $font-sans-light
+    font-weight 300
     text
       fill $color-chart-axis-text
     rect
@@ -97,6 +100,7 @@ svg
         stroke-linejoin round
     .label
       font-family $font-sans-light
+      font-weight 300
 
   .column-label
     fill $color-chart-axis-text
@@ -109,6 +113,7 @@ svg
 
 .svg-text
   font-family $font-sans-light
+  font-weight 300
   font-size $em_size
   
   tspan
@@ -138,6 +143,7 @@ svg
   &.svg-text-title
     fill $color-body-text
     font-family $font-sans
+    font-weight 700
     font-size $em_size
 
 .svg-source-pipe
@@ -148,6 +154,7 @@ svg
 .svg-label-text
   font-size $em_size
   font-family $font-sans-light
+  font-weight 300
   cursor move
 
 .crosshair
