--- a/src/styl/layout.styl
+++ b/src/styl/layout.styl
@@ -12,6 +12,7 @@ html, body
 
 h1, h2, h4, h5
 	font-family $font-sans-bold
+	font-weight 700
 	color $color-body-text
 
 h1
@@ -22,12 +23,14 @@ h2
 	font-size 24px
 	line-height 24px
 	font-style bold
+	font-weight 700
 	margin 40px 0px
 
 h3
 	font-size 20px
 	font-family $font-serif
 	font-weight bold
+	font-weight 700
 
 p
 	position relative
