--- a/src/styl/type.styl
+++ b/src/styl/type.styl
@@ -1,12 +1,10 @@
 // Typography
 
 // Fonts
-$font-sans = 'Khula-Regular',Arial,Helvetica,sans-serif
-$font-sans-light = 'Khula-Light',Arial,Helvetica,sans-serif
-$font-sans-bold = "Khula-Bold", Arial, sans-serif
+$font-sans = 'Source Sans Pro',Arial,Helvetica,sans-serif
+$font-sans-light = 'Source Sans Pro',Arial,Helvetica,sans-serif
+$font-sans-bold = 'Source Sans Pro', Arial, sans-serif
 $font-serif = Georgia,serif
 $primary-font-family = $font-sans
 $secondary-font-family = $font-serif
 $monospaced-font-family = Monaco, Lucida Console, monspace
-
-
