WBEZ Styles updates

--- a/src/styl/chart-renderer.styl
+++ b/src/styl/chart-renderer.styl
@@ -49,6 +49,7 @@ svg
 
 		&.strong
 			font-family $font-sans-bold
+			font-weight 700
 
 		&.strong .em, &.em .strong
 			font-family $font-sans-bold
@@ -65,6 +66,7 @@ svg
 			text-anchor end
 	&.svg-text-title
 		fill $color-body-text
+		font-weight 700
 
 .medium .svg-text
 	font-size $em_size
@@ -74,6 +76,7 @@ svg
 		font-size $em_size*0.6
 	&.svg-text-title
 		font-size $em_size
+		font-weight 700
 
 .small .svg-text
 		font-size $em_size_small
