--- a/src/styl/colors.styl
+++ b/src/styl/colors.styl
@@ -1,11 +1,11 @@
 // Colors
 
 $color-bg = #fff
-$color-body-text = #666
+$color-body-text = #252525
 $color-chart-gridline = #ddd
 $color-chart-meta = #CCCCCC
-$color-chart-axis-text = #666
-$color-chart-title-text = #333
+$color-chart-axis-text = #888B90
+$color-chart-title-text = #252525
 $color-chart-zeroline = #333
 
 $color-editor-border = #e2e2e2
@@ -15,15 +15,15 @@ $color-editor-text = #333333
 $color-editor-placeholder = #CACACA
 
 $chart-colors = \
+	#ec0101 \
+	#252525 \
+	#F5F5F5 \
 	#F9B816 \
+	#E3A816 \
 	#72A2A9 \
-	#EC0101 \
-	#abd9e9 \
-	#f46d43 \
-	#74add1 \
-	#4575b4 \
-	#313695 \
-	#999 \
+	#888B90 \
+	#C5C5C5 \
+	#B1B1B1 \
 	#666 \
 	#ccc
 
