--- a/src/styl/type.styl
+++ b/src/styl/type.styl
@@ -4,7 +4,7 @@
 $font-sans = 'Source Sans Pro',Arial,Helvetica,sans-serif
 $font-sans-light = 'Source Sans Pro',Arial,Helvetica,sans-serif
 $font-sans-bold = 'Source Sans Pro', Arial, sans-serif
-$font-serif = Georgia,serif
+$font-serif = 'CharterITCStd', serif
 $primary-font-family = $font-sans
 $secondary-font-family = $font-serif
 $monospaced-font-family = Monaco, Lucida Console, monspace
